--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -7,14 +7,14 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.1.0'
+version = '2.1.1-SNAPSHOT'
 description = "Groovy library for importing and exporting json to and from a Matrix or Grid"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
-compileJava {
+JavaCompile javaCompile = compileJava {
   options.release = 21
   options.deprecation = true
   options.compilerArgs << "-Xlint:unchecked"
@@ -76,6 +76,9 @@ publishing {
         name = 'Matrix Json'
         description = "${project.description}"
         url = "https://github.com/Alipsa/matrix/matrix-json"
+        properties = [
+            'maven.compiler.release': "${javaCompile.options.release.get()}"
+        ]
         licenses {
           license {
             name = 'MIT License'
