--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.0'
+version = '0.3.1-SNAPSHOT'
 description = "Groovy library for plotting with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -23,7 +23,7 @@ repositories {
   mavenCentral()
 }
 
-compileJava {
+JavaCompile javaCompile = compileJava {
   options.release = 21
   options.deprecation = true
   options.compilerArgs << "-Xlint:unchecked"
@@ -116,6 +116,9 @@ publishing {
         name = 'Groovy Matrix Plotting'
         description = "${project.description}"
         url = "https://github.com/Alipsa/matrix/matrix-charts"
+        properties = [
+            'maven.compiler.release': "${javaCompile.options.release.get()}"
+        ]
         licenses {
           license {
             name = 'MIT License'
