--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -12,14 +12,14 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '3.2.0'
+version = '3.2.1-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
-compileJava {
+JavaCompile javaCompile = compileJava {
   options.release = 21
   options.deprecation = true
   options.compilerArgs << "-Xlint:unchecked"
@@ -123,6 +123,9 @@ publishing {
         name = 'Matrix Core'
         description = "${project.description}"
         url = "https://github.com/Alipsa/matrix"
+        properties = [
+            'maven.compiler.release': "${javaCompile.options.release.get()}"
+        ]
         licenses {
           license {
             name = 'MIT License'
