--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -24,7 +24,7 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
+JavaCompile javaCompile = compileJava {
     options.release = 21
     options.deprecation = true
     options.compilerArgs << "-Xlint:unchecked"
@@ -118,6 +118,9 @@ publishing {
                 name = 'Matrix Spreadsheet import/export'
                 description = "${project.description}"
                 url = "https://github.com/Alipsa/matrix/matrix-spreadsheet"
+                properties = [
+                    'maven.compiler.release': "${javaCompile.options.release.get()}"
+                ]
                 licenses {
                     license {
                         name = 'MIT License'
