--- a/matrix-bom/pom.xml
+++ b/matrix-bom/pom.xml
@@ -16,6 +16,18 @@
     <junitPlatformVersion.version>1.12.0</junitPlatformVersion.version>
     <slf4j.version>2.0.17</slf4j.version>
   </properties>
+  <repositories>
+    <repository>
+      <id>oss.sonatype.org-snapshot</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   <dependencyManagement>
     <dependencies>
       <dependency>
