safeguard against DIV/0 in Normalize, add selectColumns method to Matrix, add display() method to MatrixXChart add importCsv for a url in string format to CsvImporter

--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,5 @@ include 'matrix-examples:XChartDemo'
 include 'matrix-examples:AnalysisScenario1'
 findProject(':matrix-examples:AnalysisScenario1')?.name = 'AnalysisScenario1'
 
+
+include 'matrix-examples:whiskey'
