--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.0-SNAPSHOT'
+version = '0.3.0'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
