--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '3.2.1-SNAPSHOT'
+version = '3.3.0'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -53,7 +53,6 @@ dependencies {
   testImplementation 'com.h2database:h2:2.3.232'
   testImplementation libs.groovySql
   testImplementation libs.groovyGinq
-  //testImplementation libs.groovyJson
 }
 
 test {
