--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.0.2-SNAPSHOT'
+version = '2.1.0'
 description = "Groovy library common public domain and oss data in matrix format)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -37,11 +37,13 @@ compileGroovy {
 
 dependencies {
     compileOnly libs.groovy
-
+    compileOnly libs.groovyGinq
+    implementation 'org.jsoup:jsoup:1.20.1'
     compileOnly project(':matrix-core')
     testImplementation project(':matrix-core')
 
     testImplementation libs.groovy
+    testImplementation libs.groovyGinq
     testImplementation testLibs.junitJupiterApi
     testRuntimeOnly testLibs.junitJupiterEngine
     testRuntimeOnly testLibs.junitPlatformLauncher
