--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -44,10 +44,12 @@ dependencies {
 
   implementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation libs.groovy
+  testImplementation 'com.github.haifengl:smile-core:4.3.0'
+  testImplementation("se.alipsa:jfinancials:1.0.0")
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitPlatformLauncher
-  testImplementation("se.alipsa:jfinancials:1.0.0")
   testRuntimeOnly testLibs.junitJupiterEngine
+
 }
 
 test {
