add slf4jSimple test dependency

--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -49,6 +49,7 @@ dependencies {
   testImplementation testLibs.junitJupiterApi
   testRuntimeOnly testLibs.junitPlatformLauncher
   testRuntimeOnly testLibs.junitJupiterEngine
+  testRuntimeOnly testLibs.slf4jSimple
 
 }
 
