--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -11,7 +11,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.1.1-SNAPSHOT'
+version = '2.2.0'
 description = "Statistical hypothesis tests based on Matrix data."
 
 ext.nexusUrl = version.contains("SNAPSHOT")
