--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '2.1.1-SNAPSHOT'
+version = '2.2.0'
 description = "Groovy library for importing structured text into a matrix"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
