- Improve robustness of mapList in Builder (default to Object for columnType if value is null) - Override asType for Row so it supports casting to Map, List, Set and String - Override asType for Matrix so it supports casting to Map, List and Grid

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 pluginManagement {
   repositories {
-    //mavenLocal()
+    mavenLocal() // For local development, use mavenLocal to resolve SNAPSHOT dependencies
     //mavenCentral()
     gradlePluginPortal()
   }
