--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.0'
+version = '0.3.1-SNAPSHOT'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.nexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -43,10 +43,11 @@ dependencies {
     }*/
     compileOnly libs.groovy
 
-    api('com.google.cloud:google-cloud-bigquery:2.50.1')
-    api 'com.google.cloud:google-cloud-resourcemanager:1.65.0'
-    implementation platform('com.google.auth:google-auth-library-bom:1.35.0')
+    api('com.google.cloud:google-cloud-bigquery:2.51.0')
+    api 'com.google.cloud:google-cloud-resourcemanager:1.68.0'
+    implementation platform('com.google.auth:google-auth-library-bom:1.37.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
+    implementation('com.google.cloud:google-cloud-bigquerystorage:3.15.2')
 
     testImplementation libs.groovy
     testImplementation testLibs.junitJupiterApi
