add bash-based deployment scripts. Release core 3.4.0

--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -1,6 +1,6 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
-
+import java.security.MessageDigest
 import java.util.concurrent.TimeUnit
 
 plugins {
@@ -8,12 +8,12 @@ plugins {
   id('java-library')
   id('signing')
   id('maven-publish')
-  //id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT' //version "1.0.1"
-  id("se.alipsa.nexus-release-plugin") version "1.0.1"
+  id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
+  //id("se.alipsa.nexus-release-plugin") version "1.0.1"
 }
 
 group = 'se.alipsa.matrix'
-version = '3.4.0-SNAPSHOT'
+version = '3.4.0'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -167,6 +167,29 @@ signing {
     //sign configurations.archives
   } else {
     project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
+  }
+}
+
+def generateChecksum(File file, String algo) {
+  def digest = MessageDigest.getInstance(algo)
+  file.withInputStream { is -> digest.update(is.bytes) }
+  def hash = digest.digest().encodeHex().toString()
+  String extension = algo.toLowerCase().replace('-', '')
+  def checksumFile = new File("${file.absolutePath}.${extension}")
+  checksumFile.text = hash
+  println "Generated ${algo} for ${file.name} → ${checksumFile.name}"
+}
+
+tasks.withType(Sign).configureEach { signTask ->
+  doLast {
+    signTask.signatureFiles.each { ascFile ->
+      def originalFile = new File(ascFile.absolutePath - '.asc')
+      if (originalFile.exists()) {
+        ['MD5', 'SHA-1'].each { algo ->
+          generateChecksum(originalFile, algo)
+        }
+      }
+    }
   }
 }
 
