--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -1,5 +1,3 @@
-import java.security.MessageDigest
-
 plugins {
     id 'groovy'
     id 'java-library'
@@ -10,7 +8,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.1-SNAPSHOT'
+version = '0.3.1'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.releaseNexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -46,11 +44,11 @@ dependencies {
     }*/
     compileOnly libs.groovy
 
-    api('com.google.cloud:google-cloud-bigquery:2.51.0')
-    api 'com.google.cloud:google-cloud-resourcemanager:1.68.0'
+    api('com.google.cloud:google-cloud-bigquery:2.52.0')
+    api 'com.google.cloud:google-cloud-resourcemanager:1.69.0'
     implementation platform('com.google.auth:google-auth-library-bom:1.37.1')
     implementation 'com.google.auth:google-auth-library-oauth2-http'
-    implementation('com.google.cloud:google-cloud-bigquerystorage:3.15.2')
+    implementation('com.google.cloud:google-cloud-bigquerystorage:3.15.3')
 
     testImplementation libs.groovy
     testImplementation testLibs.junitJupiterApi
