--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -6,14 +6,15 @@ plugins {
   id('java-library')
   id('signing')
   id('maven-publish')
-  id("se.alipsa.nexus-release-plugin") version "1.0.1"
+  //id("se.alipsa.nexus-release-plugin") version "1.0.1"
+  id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
 }
 
 group = 'se.alipsa.matrix'
-version = '2.2.1-SNAPSHOT'
+version = '2.2.1'
 description = "Groovy library for importing structured text into a matrix"
 
-ext.nexusUrl = version.contains("SNAPSHOT")
+ext.nexusReleaseUrl = version.contains("SNAPSHOT")
     ? "https://oss.sonatype.org/content/repositories/snapshots/"
     : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
@@ -144,7 +145,7 @@ publishing {
           username = sonatypeUsername
           password = sonatypePassword
         }
-        url = nexusUrl
+        url = nexusReleaseUrl
       }
     }
   }
@@ -159,10 +160,9 @@ signing {
   }
 }
 
-if (project.ext.properties.sonatypeUsername) {
-
-  apply plugin: 'se.alipsa.nexus-release-plugin'
-  nexusReleasePlugin.nexusUrl = nexusUrl
-  nexusReleasePlugin.userName = sonatypeUsername
-  nexusReleasePlugin.password = sonatypePassword
+nexusReleasePlugin {
+  nexusUrl = nexusReleaseUrl
+  userName = project.ext.properties.sonatypeUsername
+  password = project.ext.properties.sonatypePassword
+  mavenPublication = publishing.publications.maven
 }
