--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '3.4.0'
+version = '3.4.1-SNAPSHOT'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.releaseNexusUrl = version.contains("SNAPSHOT")
