matrix-spreadsheet: - Upgrade dependencies   - com.github.javaparser:javaparser-core [3.26.4 -> 3.27.0]    - org.apache.logging.log4j:log4j-core [2.24.3 -> 2.25.1] - Remove log4j impl and just use log4j api (it's a library should not have logging implementations).

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
       library('groovyTemplates', "org.apache.groovy:groovy-templates:$groovyVersion")
       library('groovyAnt', "org.apache.groovy:groovy-ant:$groovyVersion")
       library('groovyDoc', "org.apache.groovy:groovy-groovydoc:$groovyVersion")
+      library('log4jApi', "org.apache.logging.log4j:log4j-api:2.25.1")
     }
 
     testLibs {
@@ -21,6 +22,7 @@ dependencyResolutionManagement {
       library('junitJupiterEngine', "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
       library('junitJupiterApi', "org.junit.jupiter:junit-jupiter-api:$junitVersion")
       library('slf4jSimple', "org.slf4j:slf4j-simple:2.0.17")
+      library('log4jToSlf4j', 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.1')
     }
   }
 }
