--- a/matrix-examples/candles/build.gradle
+++ b/matrix-examples/candles/build.gradle
@@ -29,9 +29,9 @@ repositories {
 }
 
 dependencies {
-  def tablesawVersion = "0.44.1"
+  def tablesawVersion = "0.44.4"
   def slf4jVersion = "2.0.17"
-  def log4j2Version = "2.24.3"
+  def log4j2Version = "2.25.1"
   implementation libs.groovy
   implementation "tech.tablesaw:tablesaw-core:$tablesawVersion"
   implementation "tech.tablesaw:tablesaw-excel:$tablesawVersion"
@@ -39,7 +39,7 @@ dependencies {
   implementation("com.mitchellbosecke:pebble:2.4.0") // Upgrade of tablesaw dependency
 
   implementation "org.slf4j:slf4j-simple:$slf4jVersion"
-  implementation "se.alipsa.gi:gi-swing:1.0.0-SNAPSHOT"
+  implementation "se.alipsa.gi:gi-swing:0.1.0"
   runtimeOnly "org.apache.logging.log4j:log4j-core:$log4j2Version"
   testImplementation testLibs.junitJupiter
   testImplementation testLibs.junitPlatformLauncher
