--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -55,8 +55,7 @@ dependencies {
     testRuntimeOnly testLibs.junitJupiterEngine
     testRuntimeOnly testLibs.junitPlatformLauncher
     testImplementation testLibs.slf4jSimple
-    testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.24.3'
-    testImplementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    testImplementation testLibs.log4jToSlf4j
 }
 
 test {
