--- a/matrix-bigquery/build.gradle
+++ b/matrix-bigquery/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group = 'se.alipsa.matrix'
-version = '0.3.2-SNAPSHOT'
+version = '0.3.2'
 description = "Groovy library for importing and exporting to and from Google BigQuery to a Matrix"
 
 ext.releaseNexusUrl = version.toString().endsWith("SNAPSHOT")
@@ -128,7 +128,6 @@ signing {
 }
 
 nexusReleasePlugin {
-    nexusUrl = releaseNexusUrl
     userName = project.ext.properties.sonatypeUsername
     password = project.ext.properties.sonatypePassword
     mavenPublication = publishing.publications.maven
