--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -4,14 +4,14 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent
 plugins {
     id('groovy')
     id('java-library')
-    //id 'org.openjfx.javafxplugin' version '0.0.13'
     id('signing')
     id('maven-publish')
-    id("se.alipsa.nexus-release-plugin") version "1.0.1"
+    //id("se.alipsa.nexus-release-plugin") version "1.0.1"
+    id("se.alipsa.nexus-release-plugin") version '2.0.0-SNAPSHOT'
 }
 
 group = 'se.alipsa.matrix'
-version = '2.1.1-SNAPSHOT'
+version = '2.1.1'
 description = "Groovy library common public domain and oss data in matrix format)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
@@ -153,9 +153,8 @@ signing {
     }
 }
 
-if (project.ext.properties.sonatypeUsername) {
-    apply plugin: 'se.alipsa.nexus-release-plugin'
-    nexusReleasePlugin.nexusUrl = nexusUrl
-    nexusReleasePlugin.userName = sonatypeUsername
-    nexusReleasePlugin.password = sonatypePassword
+nexusReleasePlugin {
+    userName = project.ext.properties.sonatypeUsername
+    password = project.ext.properties.sonatypePassword
+    mavenPublication = publishing.publications.maven
 }
